--- a/pom.xml
+++ b/pom.xml
@@ -1,99 +1,94 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.tom</groupId>
-  <artifactId>SpringJDBC</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-   <properties>
-       <!-- Generic properties -->
-       <java.version>1.7</java.version>
-       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.tom</groupId>
+	<artifactId>SpringJDBC</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<!-- Generic properties -->
+		<java.version>1.7</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-   </properties>
+	</properties>
 
-   <repositories>
-       <!-- Repository for ORACLE ojdbc6. -->
-       <repository>
-           <id>codelds</id>
-           <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-       </repository>
-   </repositories>
+	<repositories>
+		<!-- Repository for ORACLE ojdbc6. -->
+		<repository>
+			<id>codelds</id>
+			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
+		</repository>
+	</repositories>
 
-   <dependencies>
+	<dependencies>
 
-       <!-- Spring framework -->
-       <!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
-       <dependency>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-core</artifactId>
-           <version>4.1.4.RELEASE</version>
-       </dependency>
+		<!-- Spring framework -->
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
 
-       <!-- http://mvnrepository.com/artifact/org.springframework/spring-context -->
-       <dependency>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-context</artifactId>
-           <version>4.1.4.RELEASE</version>
-       </dependency>
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
 
-       <!-- http://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-       <dependency>
-           <groupId>org.springframework</groupId>
-           <artifactId>spring-jdbc</artifactId>
-           <version>4.1.4.RELEASE</version>
-       </dependency>
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
 
-       <!-- MySQL database driver -->
-       <!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-       <dependency>
-           <groupId>mysql</groupId>
-           <artifactId>mysql-connector-java</artifactId>
-           <version>5.1.34</version>
-       </dependency>
+		<!-- MySQL database driver -->
+		<!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
 
-       <!-- Oracle database driver -->
-       <dependency>
-           <groupId>com.oracle</groupId>
-           <artifactId>ojdbc6</artifactId>
-           <version>11.2.0.3</version>
-       </dependency>
+		<!-- Oracle database driver -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3</version>
+		</dependency>
 
-       <!-- SQLServer database driver (JTDS) -->
-       <!-- http://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
-       <dependency>
-           <groupId>net.sourceforge.jtds</groupId>
-           <artifactId>jtds</artifactId>
-           <version>1.3.1</version>
-       </dependency>
+		<!-- SQLServer database driver (JTDS) -->
+		<!-- http://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+			<artifactId>jtds</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
-   </dependencies>
-  
-  <build>
-	  <plugins>
-		
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <manifestEntries>
-                    <Main-Class>com.tom.springjdbc.MainDemo</Main-Class>
-                  </manifestEntries>
-                </transformer>
-              </transformers>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-   
-	  </plugins>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
+		</plugins>
 	</build>
-  
+
 </project>
