--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-
 
 		<!-- SQLServer database driver (JTDS) -->
 		<!-- http://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
@@ -60,7 +53,12 @@
 			<artifactId>jtds</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -104,6 +102,7 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+			        <encoding>gbk</encoding>   
 				</configuration>
 			</plugin>
 
