--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,27 @@
 			        <encoding>gbk</encoding>   
 				</configuration>
 			</plugin>
+			
+			 <plugin>  
+            <groupId>org.apache.maven.plugins</groupId>  
+            <artifactId>maven-shade-plugin</artifactId>  
+            <version>2.4.1</version>  
+            <executions>  
+                <execution>  
+                    <phase>package</phase>  
+                    <goals>  
+                        <goal>shade</goal>  
+                    </goals>  
+                    <configuration>  
+                        <transformers>  
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">  
+                                <mainClass>com.tom.springjdbc.MainDemo</mainClass>  
+                            </transformer>  
+                        </transformers>  
+                    </configuration>  
+                </execution>  
+            </executions>  
+        </plugin>  
 
 		</plugins>
 	</build>
