--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-			        <encoding>utf8</encoding>   
+			        <encoding>gbk</encoding>   
 				</configuration>
 			</plugin>
 			
